1.5.0i1:
    Checks & Agents:
    * 4331 FIX: check_sql: Is now printing FreeTDS debug messages in verbose mode (with MSSQL)
    * 4203 FIX: Fix failed SSH login in Linux remote alert handlers on some distributions...

    Multisite:
    * 4365 FIX: Service availability: Host down could not be rewritten to other states like CRIT


1.4.0b1:
    Core & Setup:
    * 4286 SNMP MIBs of the Event Console can now be packed using MKPs...
    * 4269 FIX: Verifying unexpected keys in check_info while loading checks...
    * 4281 FIX: Fixed piggyback hosts with spaces in names leading to crashes...
    * 4329 FIX: mkbackup: Fixed "Operation not permitted" error when backing up to some NFS shares

    Checks & Agents:
    * 4104 veeam_tapejobs: New check to monitor Veeam tape jobs
    * 4170 local: local check is now clusteraware. Best or worst state in cluster mode can be configured...
    * 4198 mkeventd_status: rework graph templates, only group metrics where it makes sense'
    * 4005 agent_activemq: now able to provide BasicAuth credentials...
            NOTE: Please refer to the migration notes!
    * 4201 mkeventd_status: avoid duplicate averaging, make graphs more precise in time resolution...
    * 4007 Windows Agent: Reduced number of needless WMI Queries when Skype performance counters are missing...
    * 4210 jolokia_generic, jolokia_generic.rate, jolokia_generic.string: New checks to monitor custom MBeans
    * 4175 didactum_sensors_analog.humidity: new check which monitors the humidity of Didactum devices supporting the DIDACTUM-SYSTEM-MIB
    * 4257 logwatch.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
    * 4013 Ruckus Spot / ruckus_spot_locations: new check to monitor the number of unqiue MACs addresses...
    * 4293 wut_webtherm: now detects devices which support WebGraphThermoBaro-MIB
    * 4294 statgrab_disk: Works now in the same way as other diskstat check plugins...