@@ -1,0 +1,10 @@
+Title: Fixed random exception related to html.unplug() in GUI
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.5.0i1
+Date: 1487142764
+
+
