@@ -361,25 +361,30 @@ class OutputFunnel(object):
 
     # Pull the plug for a moment to allow the sink content to pass through.
     def flush(self):
-        if self.is_plugged():
-            text = self.plug_text[self.plug_level]
-            self.plug_text[self.plug_level] = ""
-            self.plug_level -= 1
-            self.write(text)
-            self.plug_level += 1
+        if not self.is_plugged():
+            return None
+
+        text = self.plug_text[self.plug_level]
+        self.plug_text[self.plug_level] = ""
+        self.plug_level -= 1
+        self.write(text)
+        self.plug_level += 1
 
 
     # Get the sink content in order to do something with it.
     def drain(self):
-        if self.is_plugged():
-            text = self.plug_text[self.plug_level]
-            self.plug_text[self.plug_level] = ''
-            return text
-        else:
+        if not self.is_plugged():
             return ''
+
+        text = self.plug_text[self.plug_level]
+        self.plug_text[self.plug_level] = ''
+        return text
 
 
     def unplug(self):
+        if not self.is_plugged():
+            return
+
         self.flush()
         self.plug_text.pop()
         self.plug_level -= 1
